--- a/src/components/Sidebar/ChatList.css
+++ b/src/components/Sidebar/ChatList.css
@@ -15,11 +15,14 @@
     border-bottom: 1px solid var(--color-border);
 }
 
-.brand {
+.upChats {
     font-family: var(--font-family-heading);
     color: var(--color-text-primary);
-    font-weight: 700;
-    margin-bottom: var(--radius-sm);}
+    font-weight: 400;
+    margin-bottom: var(--radius-sm);
+    font-size: 30px;
+
+}
 
 .chatItems {
     display: grid;
